--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,118 +1,175 @@
 :root {
-  --main-color: rgb(159, 50, 159);
-  --white: #fff;
-  --bg-color: rgb(87, 87, 158);
+	--dark: #374151;
+	--darker: #1F2937;
+	--darkest: #111827;
+	--grey: #6B7280;
+	--pink: #e2187d;
+	--purple: #491ab8;
+	--light: #EEE;
 }
 
-.container {
-  width: 100%;
-  height: 100vh;
-  background-color: var(--bg-color);
-  color: var(--main-color);
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  overflow: auto;
+* {
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Fira sans", sans-serif;
 }
 
-.center_container {
-  width: 300px;
-  height: 450px;
-  border: none;
-  border-radius: 10px;
-  background-color: white;
-  box-shadow: 2px 2px 10px 2px #333;
-  margin: 10px;
-  overflow-y: auto;
-  overflow-x: hidden;
+body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	color: #FFF;
+	background-color: #a2b6a0;
+    background-image: linear-gradient(to right, #8b8f8a, #1d98cc );
 }
 
-.center_container .header {
-  text-align: center;
-  color: var(--white);
-  margin-bottom: 10px;
-  background-color: var(--main-color);
+header {
+	padding: 2rem 1rem;
+	max-width: 800px;
+	width: 100%;
+	margin: 0 auto;
 }
 
-.center_container .header h1 {
-  font-size: 30px;
-  margin: 0;
-  padding: 8px 0;
+header h1{ 
+	font-size: 2.5rem;
+	font-weight: 550;
+	color:rgb(208, 24, 100);
+	margin-bottom: 0.6rem;
+    margin-top: 3rem;
 }
 
-.center_container .data_input {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+header h1 span{
+    color: aqua;
 }
 
-.center_container .data_input input {
-  border: none;
-  border-bottom: 3px solid var(--main-color);
-  color: var(--main-color);
-  outline: none;
-  margin-right: 20px;
-  text-align: center;
-  font-size: 18px;
-  width: 150px;
+#new-task-form {
+	display: flex;;
 }
 
-.center_container .data_input button {
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  border: none;
-  border-radius: 50%;
-  font-weight: bolder;
-  background-color: var(--main-color);
-  font-size: 30px;
-  color: var(--white);
+input, button {
+	appearance: none;
+	border: none;
+	outline: none;
+	background: none;
 }
 
-.center_container .data_input button:hover {
-  background-color: rgb(5, 186, 99);
-  cursor: pointer;
+#new-task-input {
+	flex: 1 1 0%;
+	background-color: #000000;
+	padding: 1rem;
+	border-radius: 1rem;
+	margin-right: 1rem;
+	color: var(--light);
+	font-size: 1.25rem;
 }
 
-.center_container .lists {
-  list-style: none;
-  padding: 0;
-  margin: 5px 10px;
+#new-task-input::placeholder {
+	color: var(--grey);
 }
 
-.center_container .lists li {
-  display: flex;
-  align-items: center;
+#new-task-submit {
+	color: var(--pink);
+	font-size: 1.5rem;
+	font-weight: 700;
+	background-image: linear-gradient(to right, var(--pink), var(--purple));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	cursor: pointer;
+	transition: 0.4s;
 }
 
-.center_container .lists li button {
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  border: none;
-  border-radius: 50%;
-  font-weight: bold;
-  background-color: var(--main-color);
-  font-size: 14px;
-  color: var(--white);
+#new-task-submit:hover {
+	opacity: 0.8;
 }
 
-.center_container .lists li button:hover {
-  background-color: red;
-  cursor: pointer;
+#new-task-submit:active {
+	opacity: 0.6;
 }
 
-.center_container .lists li p {
-  margin: 0;
-  margin-left: 10px;
-  font-weight: 500;
-  line-height: 1.5;
+main {
+	flex: 1 1 0%;
+	max-width: 800px;
+	width: 100%;
+	margin: 0 auto;
 }
 
-hr {
-  margin: 5px 0;
+.task-list {
+	padding: 1rem;
+}
+
+.task-list h2 {
+	font-size: 1.5rem;
+	font-weight: 400;
+	color: var(--darker);
+	margin-bottom: 1rem;
+}
+
+#tasks .task {
+	display: flex;
+	justify-content: space-between;
+	background-color: var(--darkest);
+	padding: 1rem;
+	border-radius: 1rem;
+	margin-bottom: 1rem;
+}
+
+.task .content {
+	flex: 1 1 0%;
+}
+
+.task .content .text {
+	color: var(--light);
+	font-size: 1.125rem;
+	width: 100%;
+	display: block;
+	transition: 0.4s;
+}
+
+.task .content .text:not(:read-only) {
+	color: var(--pink);
+}
+
+.task .actions {
+	display: flex;
+	margin: 0 -0.5rem;
+}
+
+.task .actions button {
+	cursor: pointer;
+	margin: 0 0.5rem;
+	font-size: 1.125rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	transition: 0.4s;
+}
+
+.task .actions button:hover {
+	opacity: 0.8;
+}
+
+.task .actions button:active {
+	opacity: 0.6;
+}
+
+.task .actions .edit {
+	background-image: linear-gradient(to right, var(--pink), var(--purple));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.task .actions .delete {
+	color: crimson;
+}
+
+
+@media(max-width:998px){
+    html{
+        font-size: 85%;
+    }
+}
+
+@media(max-width:768px){
+    html{
+        font-size: 75%;
+    }
 }
